--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <title>News</title>
 <meta name="viewport" content="width=720, height=1280, user-scalable=no" />
 <link rel="stylesheet" href="./css/style.css"/>
-<link rel="stylesheet" href="./common/css/style.css"/>
-<script type="text/javascript" src="./common/components/jQuery/jquery-1.8.2.js"></script>
-<script type="text/javascript" src="./common/js/init.js"></script>
+<link rel="stylesheet" href="./DNA_common/css/style.css"/>
+<script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
+<script type="text/javascript" src="./DNA_common/js/init.js"></script>
 
 <script type="text/javascript">
 	includeJs("./js/iscroll.js");
@@ -26,45 +26,36 @@
 
 <body>
 
-<div id="topBarIcons"></div>
+<!-- <div id="topBarIcons"></div> -->
+<div id="topBar"></div>
+<!-- <div id="clockElement"></div> -->
+<!-- <div id="wrapper" class="wrapper"> -->
 
-<div id="newsChannels" class="newsChannels fontSizeLarger textBgColorThemeTransparent">
+	<div id="newsChannels" class="newsChannels fontSizeLarger textBgColorThemeTransparent">
 
-    <span id="top" class="fontColorNormal" ontouchend="showTop(); topScroll.refresh()">Top News</span> &#160;
-    <span id="entertain" class="fontColorTheme" ontouchend="showEntertain(); entScroll.refresh()">Entertainment</span>&#160; <span id="sports" class="fontColorTheme" ontouchend="showSports(); sportsScroll.refresh()">Sports</span>
+	    <span id="top" class="fontColorNormal" ontouchend="showTop(); topScroll.refresh()">Top News</span> &#160;
+	    <span id="entertain" class="fontColorTheme" ontouchend="showEntertain(); entScroll.refresh()">Entertainment</span>&#160; <span id="sports" class="fontColorTheme" ontouchend="showSports(); sportsScroll.refresh()">Sports</span>
 
-</div>
+	</div>
 
-<div id="clockElement"></div>
 
-<div id="topArticleList" class="articleList borderColorLight">
+	<div id="topArticleList" class="articleList borderLtBlue"></div></div></div>
 
-</div></div>
+	<div id="entertainArticleList" class="articleList borderLtBlue"></div></div></div>
 
-</div>
+	<div id="sportsArticleList" class="articleList borderLtBlue"></div></div></div>
 
-<div id="entertainArticleList" class="articleList borderColorLight">
+	<div class="articleListGradFade"><span class="scrollIndicator"></span></div>
 
-</div></div>
+	<div id="articleClose" class="fontSizeXLarge fontColorNormal borderLtBlue bgColorThemeTransparent" ontouchend="closeAll('article')">X</div>
 
-</div>
+	<div id="articleContainer" class="article borderLtBlue">
+		<ul id="articleScroller"></ul>
+	</div>
 
-<div id="sportsArticleList" class="articleList borderColorLight">
 
-</div></div>
-
-</div>
-
-<div class="articleListGradFade"><span class="scrollIndicator"></span></div>
-
-<div id="articleClose" class="fontSizeXLarge fontColorNormal borderColorLight bgColorThemeTransparent" ontouchend="closeAll('article')">X</div>
-
-<div id="articleContainer" class="article borderColorLight"><ul id="articleScroller">
-
-</ul></div>
-
+<!-- </div> --><!-- end of wrapper
 <div id="bottomPanel" class="bottomPanel bottomPanelImg"></div>
-
 </body>
 
 </html>
