--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <title>News</title>
 <meta name="viewport" content="width=720, height=1280, user-scalable=no" />
-<link rel="stylesheet" href="./css/style.css"/>
 <link rel="stylesheet" href="./DNA_common/css/style.css"/>
+<link rel="stylesheet" href="./css/style.css"/>
 <script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
 <script type="text/javascript" src="./DNA_common/js/init.js"></script>
 
@@ -29,9 +29,9 @@
 <!-- <div id="topBarIcons"></div> -->
 <div id="topBar"></div>
 <!-- <div id="clockElement"></div> -->
-<!-- <div id="wrapper" class="wrapper"> -->
+<div class="wrapper">
 
-	<div id="newsChannels" class="newsChannels fontSizeLarger textBgColorThemeTransparent">
+	<div id="newsChannels" class="newsChannels fontSizeXXXLarge textBgColorThemeTransparent">
 
 	    <span id="top" class="fontColorNormal" ontouchend="showTop(); topScroll.refresh()">Top News</span> &#160;
 	    <span id="entertain" class="fontColorTheme" ontouchend="showEntertain(); entScroll.refresh()">Entertainment</span>&#160; <span id="sports" class="fontColorTheme" ontouchend="showSports(); sportsScroll.refresh()">Sports</span>
@@ -39,11 +39,11 @@
 	</div>
 
 
-	<div id="topArticleList" class="articleList borderLtBlue"><ul><li></li><li></li></ul></div></div></div>
+	<div id="topArticleList" class="articleList borderLtBlue"><ul><li></li><li></li></ul></div><!-- </div></div> -->
 
-	<div id="entertainArticleList" class="articleList borderLtBlue"><ul><li></li><li></li></ul></div></div></div>
+	<div id="entertainArticleList" class="articleList borderLtBlue"><ul><li></li><li></li></ul></div><!-- </div></div> -->
 
-	<div id="sportsArticleList" class="articleList borderLtBlue"></div></div></div>
+	<div id="sportsArticleList" class="articleList borderLtBlue"></div><!-- </div></div> -->
 
 	<div class="articleListGradFade"><span class="scrollIndicator"></span></div>
 
@@ -52,10 +52,10 @@
 	<div id="articleContainer" class="article borderLtBlue">
 		<ul id="articleScroller"></ul>
 	</div>
+</div>
 
 
-<!-- </div> --><!-- end of wrapper
-<div id="bottomPanel" class="bottomPanel bottomPanelImg"></div>
+<div id="bottomBar"></div>
 </body>
 
 </html>
