--- a/index.html
+++ b/index.html
@@ -7,42 +7,68 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  *
 -->
-<html>
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<title>News</title>
-		<meta name="viewport" content="width=1080, height=1920, user-scalable=no" />
-		<link rel="stylesheet" href="./DNA_common/css/style.css"/>
-		<link rel="stylesheet" href="./css/style.css"/>
-		<script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
-		<script type="text/javascript" src="./DNA_common/js/init.js"></script>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
+  <link rel="stylesheet" href="./DNA_common/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="import" href="./imports.html">
+  <title>News</title>
+  <template id="newsItem">
+    <a href="#">
+      <li>
+        <div class="articleListItem textBgColorThemeTransparent">
+          <div class="thumbnail">
+            <img width="260px">
+          </div>
+          <div class="itemText">
+            <span class="itemDate fontSizeSmall orange-viv"></span><br>
+            <span class="itemTitle fontSizeSmall orange-viv"></span><br>
+            <span class="itemDesc fontSizeSmall orange-viv"></span>
+          </div>
+          <div class="itemTextGradFade"></div>
+        </div>
+      </li>
+    </a>
+  </template>
+</head>
+<body>
+  <div id="base">
+    <div id="topBar"></div>
+    <div id="app">
+      <div id="clockElement"></div>
+      <div class="wrapper">
+        <div id="newsChannels" class="newsChannels textBgColorThemeTransparent_DNA">
+          <span id="top" class="orange-viv selected padRight" ontouchend="showTop(); topScroll.refresh()">TOP NEWS</span> &#160;
+          <span id="entertain" class="orange-lt deselected padRight" ontouchend="showEntertain(); entScroll.refresh()">PEOPLE</span>&#160; 
+          <span id="sports" class="orange-lt deselected" ontouchend="showSports(); sportsScroll.refresh()">SPORTS</span>
+        </div>
+        <div id="topArticleList" class="articleList borderLtBlue_DNA">
+          <ul id="topArticleListInner"></ul>
+        </div>
+        <div id="entertainArticleList" class="articleList borderLtBlue_DNA">
+          <ul id="entertainArticleListInner"></ul>
+        </div>
+        <div id="sportsArticleList" class="articleList borderLtBlue_DNA">
+          <ul id="sportsArticleListInner"></ul>
+        </div>
+        <div class="articleListGradFade"><span class="scrollIndicator"></span></div>
+        <div id="articleClose" class="fontSizeXLarge orange-viv borderLtBlue_DNA bgColorThemeTransparent" ontouchend="closeAll('article')">X</div>
+        <div id="articleContainer" class="article borderLtBlue_DNA">
+          <ul id="articleScroller"></ul>
+        </div>
+      </div>
+    </div>
+    <div id="bottomBar"></div>
+  </div>
 
-		<script type="text/javascript">
-			includeJs("./js/iscroll.js");
-			includeJs("./js/main.js");
-		</script>
-	</head>
-	<body>
-		<div id="base">
-			<div id="topBar"></div>
-			<div id="app">
-				<!-- <div id="clockElement"></div> -->
-				<div class="flex-parent flex-column">
-					<div id="newsChannels" class="newsChannels fontSizeXXXLarge textBgColorThemeTransparent">
-						<span id="top" class="fontColorNormal" ontouchend="showTop(); topScroll.refresh()">Top News</span> &#160;
-						<span id="entertain" class="fontColorTheme" ontouchend="showEntertain(); entScroll.refresh()">Entertainment</span>&#160; <span id="sports" class="fontColorTheme" ontouchend="showSports(); sportsScroll.refresh()">Sports</span>
-					</div>
-					<div id="topArticleList" class="articleList borderLtBlue"><ul><li></li><li></li></ul></div><!-- </div></div> -->
-					<div id="entertainArticleList" class="articleList borderLtBlue"><ul><li></li><li></li></ul></div><!-- </div></div> -->
-					<div id="sportsArticleList" class="articleList borderLtBlue"></div><!-- </div></div> -->
-					<div id="articleClose" class="fontSizeXLarge fontColorNormal borderLtBlue bgColorThemeTransparent" ontouchend="closeAll('article')">X</div>
-					<div id="articleContainer" class="article borderLtBlue">
-						<ul id="articleScroller"></ul>
-					</div>
-					<div class="articleListGradFade"><span class="scrollIndicator"></span></div>
-				</div>
-			</div>
-			<div id="bottomBar"></div>
-		</div>
-	</body>
+
+  <script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
+  <script type="text/javascript" src="./DNA_common/js/init.js"></script>
+  <script type="text/javascript">
+   includeJs("./js/iscroll.js");
+   includeJs("./js/main.js");
+ </script>
+</body>
 </html>
