--- a/index.html
+++ b/index.html
@@ -8,52 +8,41 @@
  *
 -->
 <html>
-<head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<title>News</title>
-	<meta name="viewport" content="width=1080, height=1920, user-scalable=no" />
-	<link rel="stylesheet" href="./DNA_common/css/style.css"/>
-	<link rel="stylesheet" href="./css/style.css"/>
-	<script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
-	<script type="text/javascript" src="./DNA_common/js/init.js"></script>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<title>News</title>
+		<meta name="viewport" content="width=1080, height=1920, user-scalable=no" />
+		<link rel="stylesheet" href="./DNA_common/css/style.css"/>
+		<link rel="stylesheet" href="./css/style.css"/>
+		<script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
+		<script type="text/javascript" src="./DNA_common/js/init.js"></script>
 
-	<script type="text/javascript">
-		includeJs("./js/iscroll.js");
-		includeJs("./js/main.js");
-	</script>
-
-</head>
-
-<body>
-
-	<!-- <div id="topBarIcons"></div> -->
-	<div id="topBar"></div>
-	<div id="clockElement"></div>
-	<div class="wrapper">
-
-		<ul id="newsChannels" class="newsChannels newsTopics textBgColorThemeTransparent_DNA">
-			<li><span id="top" class="black" ontouchend="showTop(); topScroll.refresh()"><strong>TOP NEWS</strong></span></li>
-			<li><span id="entertain" class="black" ontouchend="showEntertain(); entScroll.refresh()"><strong>PEOPLE</strong></span></li>
-			<li><span id="sports" class="black" ontouchend="showSports(); sportsScroll.refresh()"><strong>SPORTS</strong></span></li>
-		</ul>
-
-		<div id="topArticleList" class="articleList borderLtBlue_DNA"><ul><li></li><li></li></ul></div><!-- </div></div> -->
-
-		<div id="entertainArticleList" class="articleList borderLtBlue_DNA"><ul><li></li><li></li></ul></div><!-- </div></div> -->
-
-		<div id="sportsArticleList" class="articleList borderLtBlue_DNA"></div><!-- </div></div> -->
-
-		<div class="articleListGradFade"><span class="scrollIndicator"></span></div>
-
-		<div id="articleClose" class="fontSizeXLarge fontColorNormal borderLtBlue_DNA bgColorThemeTransparent" ontouchend="closeAll('article')">X</div>
-
-		<div id="articleContainer" class="article borderLtBlue_DNA">
-
-			<ul id="articleScroller"></ul>
+		<script type="text/javascript">
+			includeJs("./js/iscroll.js");
+			includeJs("./js/main.js");
+		</script>
+	</head>
+	<body>
+		<div id="base">
+			<div id="topBar"></div>
+			<div id="app">
+				<!-- <div id="clockElement"></div> -->
+				<div class="flex-parent flex-column">
+					<div id="newsChannels" class="newsChannels fontSizeXXXLarge textBgColorThemeTransparent">
+						<span id="top" class="fontColorNormal" ontouchend="showTop(); topScroll.refresh()">Top News</span> &#160;
+						<span id="entertain" class="fontColorTheme" ontouchend="showEntertain(); entScroll.refresh()">Entertainment</span>&#160; <span id="sports" class="fontColorTheme" ontouchend="showSports(); sportsScroll.refresh()">Sports</span>
+					</div>
+					<div id="topArticleList" class="articleList borderLtBlue"><ul><li></li><li></li></ul></div><!-- </div></div> -->
+					<div id="entertainArticleList" class="articleList borderLtBlue"><ul><li></li><li></li></ul></div><!-- </div></div> -->
+					<div id="sportsArticleList" class="articleList borderLtBlue"></div><!-- </div></div> -->
+					<div id="articleClose" class="fontSizeXLarge fontColorNormal borderLtBlue bgColorThemeTransparent" ontouchend="closeAll('article')">X</div>
+					<div id="articleContainer" class="article borderLtBlue">
+						<ul id="articleScroller"></ul>
+					</div>
+					<div class="articleListGradFade"><span class="scrollIndicator"></span></div>
+				</div>
+			</div>
+			<div id="bottomBar"></div>
 		</div>
-	</div>
-
-	<div id="bottomBar"></div>
-</body>
-
+	</body>
 </html>
