News App Update
This patch fixes the following display and functionality issues with the News App:
News articles now properly return to the currently selected article list when touched.
The bottom bar is no longer overlapped by images and article text.
The volume slider now appears above articles and lists.

Change-Id: I19bd36c63c6dd0111c9cd95394c330d2a476da1f

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <div id="clockElement"></div>
       <div class="wrapper">
         <div id="newsChannels" class="newsChannels textBgColorThemeTransparent_DNA">
-          <span id="top" class="orange-viv selected padRight" ontouchend="showTop(); topScroll.refresh()">TOP NEWS</span> &#160;
-          <span id="entertain" class="orange-lt deselected padRight" ontouchend="showEntertain(); entScroll.refresh()">PEOPLE</span>&#160; 
-          <span id="sports" class="orange-lt deselected" ontouchend="showSports(); sportsScroll.refresh()">SPORTS</span>
+          <span id="top" class="orange-viv selected padRight" ontouchend="showTop();">TOP NEWS</span> &#160;
+          <span id="entertain" class="orange-lt deselected padRight" ontouchend="showEntertain();">PEOPLE</span>&#160; 
+          <span id="sports" class="orange-lt deselected" ontouchend="showSports();">SPORTS</span>
         </div>
         <div id="topArticleList" class="articleList borderLtBlue_DNA">
           <ul id="topArticleListInner"></ul>
