DNA_News (All Changes App Specific):
1. Restructured and reorganized all z-index numbers to more manageable values
2. Deleted z-index !important ovverides for system settings, app grid and other template elements
3. Renamed "style.css" to "news.css"
4. Deleted "spinner.css" and "car.css" from CSS directory
5. Removed "fontSizeSmall" class being imported from WRT
6. Removed HTML and CSS for close article button
7. Removed some unnecessary CSS rules that were being overwritten anyway
8. Restored article fade gradient effect/graphic at bottom of article list
9. Resolved merge conflict by updating margin value on .newsChannels container

Change-Id: I90b9aa86ce6a19f5c34eaf5fd784493809480f5c

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="./DNA_common/css/style.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/news.css">
   <link rel="import" href="./imports.html">
   <title>News</title>
   <template id="newsItem">
@@ -23,9 +23,9 @@
             <img width="260px">
           </div>
           <div class="itemText">
-            <span class="itemDate fontSizeSmall orange-viv"></span><br>
-            <span class="itemTitle fontSizeSmall orange-viv"></span><br>
-            <span class="itemDesc fontSizeSmall orange-viv"></span>
+            <span class="itemDate orange-viv"></span><br>
+            <span class="itemTitle orange-viv"></span><br>
+            <span class="itemDesc orange-viv"></span>
           </div>
           <div class="itemTextGradFade"></div>
         </div>
@@ -48,13 +48,13 @@
           <ul id="topArticleListInner"></ul>
         </div>
         <div id="entertainArticleList" class="articleList borderLtBlue_DNA">
-          <ul id="entertainArticleListInner"></ul>
+          <ul id="entertainArticleListInner">
+          </ul>
         </div>
         <div id="sportsArticleList" class="articleList borderLtBlue_DNA">
           <ul id="sportsArticleListInner"></ul>
         </div>
         <div class="articleListGradFade"><span class="scrollIndicator"></span></div>
-        <div id="articleClose" class="fontSizeXLarge orange-viv borderLtBlue_DNA bgColorThemeTransparent" ontouchend="closeAll('article')">X</div>
         <div id="articleContainer" class="article borderLtBlue_DNA">
           <ul id="articleScroller"></ul>
         </div>
