DNA_News: old css classes removed in index.html/css/index.html
Change-Id: I1eb7f05f56bfc3d56850e7026d051bf654cbb3da

--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
           <span id="entertain" class="orange-lt deselected padRight" ontouchend="showEntertain();">PEOPLE</span>&#160; 
           <span id="sports" class="orange-lt deselected" ontouchend="showSports();">SPORTS</span>
         </div>
-        <div id="topArticleList" class="articleList borderLtBlue_DNA">
+        <div id="topArticleList" class="articleList borderLtBlue">
           <ul id="topArticleListInner"></ul>
         </div>
-        <div id="entertainArticleList" class="articleList borderLtBlue_DNA">
+        <div id="entertainArticleList" class="articleList borderLtBlue">
           <ul id="entertainArticleListInner">
           </ul>
         </div>
-        <div id="sportsArticleList" class="articleList borderLtBlue_DNA">
+        <div id="sportsArticleList" class="articleList borderLtBlue">
           <ul id="sportsArticleListInner"></ul>
         </div>
         <div class="articleListGradFade"><span class="scrollIndicator"></span></div>
-        <div id="articleContainer" class="article borderLtBlue_DNA">
+        <div id="articleContainer" class="article borderLtBlue">
           <ul id="articleScroller"></ul>
         </div>
       </div>
