changed to display sports
Change-Id: I4123a1317f3ee2850141b40c19d4c37e8158b9b9

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </a>
   </template>
 </head>
-<body>
+<body onload="showSports();">
   <div id="base">
     <div id="topBar"></div>
     <div id="app">
