--- a/index.html
+++ b/index.html
@@ -16,67 +16,200 @@
  *
 -->
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
-  <link rel="stylesheet" href="./DNA_common/css/style.css">
-  <link rel="stylesheet" href="./css/news.css">
-  <!-- JavaScript is being loaded in at the bottom of the page for allowing the page to load visibly before JavaScript is executed.-->
-  <title>News</title>
-  <template id="newsItem">
-    <a href="#">
-      <li>
-        <div class="articleListItem">
-          <div class="thumbnail">
-            <img width="260px">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="./DNA_common/css/style.css">
+    <link rel="stylesheet" href="./css/news.css">
+    <!-- JavaScript is being loaded in at the bottom of the page for allowing the page to load visibly before JavaScript is executed.-->
+    <title>News</title>
+    <template id="newsItem">
+      <a href="#">
+        <li>
+          <div class="articleListItem">
+            <div class="thumbnail">
+              <img width="260px">
+            </div>
+            <div class="itemText">
+              <span class="itemDate orange-viv"></span>
+              <br>
+              <span class="itemTitle orange-viv"></span>
+              <br>
+              <span class="itemDesc orange-viv"></span>
+            </div>
+            <div class="itemTextGradFade"></div>
           </div>
-          <div class="itemText">
-            <span class="itemDate orange-viv"></span><br>
-            <span class="itemTitle orange-viv"></span><br>
-            <span class="itemDesc orange-viv"></span>
+        </li>
+      </a>
+    </template>
+  </head>
+
+  <body onload="showSports();">
+    <div id="top-bar"></div>
+    <div id="center-panel">
+      <div id="app">
+        <div id="clockElement"></div>
+        <div class="wrapper">
+          <div id="feed-channels" class="grey-bg">
+            <div id="top-news-button" class="channel-button selected" ontouchend="showTop();">TOP NEWS</div>
+            <div id="people-button" class="channel-button" ontouchend="showEntertain();">PEOPLE</div>
+            <div id="sports-button" class="channel-button" ontouchend="showSports();">SPORTS</div>
           </div>
-          <div class="itemTextGradFade"></div>
-        </div>
-      </li>
-    </a>
-  </template>
-</head>
-<body onload="showSports();">
-  <div id="base">
-    <div id="topBar"></div>
-    <div id="app">
-      <div id="clockElement"></div>
-      <div class="wrapper">
-        <div id="newsChannels" class="news-categories grey-bg">
-          <span id="top" class="orange-viv selected padRight" ontouchend="showTop();">TOP NEWS</span> &#160;
-          <span id="entertain" class="orange-lt deselected padRight" ontouchend="showEntertain();">PEOPLE</span>&#160; 
-          <span id="sports" class="orange-lt deselected" ontouchend="showSports();">SPORTS</span>
-        </div>
-        <div id="topArticleList" class="articleList">
-          <ul id="topArticleListInner"></ul>
-        </div>
-        <div id="entertainArticleList" class="articleList">
-          <ul id="entertainArticleListInner">
-          </ul>
-        </div>
-        <div id="sportsArticleList" class="articleList">
-          <ul id="sportsArticleListInner"></ul>
-        </div>
-        <div class="articleListGradFade"><span class="scrollIndicator"></span></div>
-        <div id="articleContainer" class="article">
-          <ul id="articleScroller"></ul>
+          <div id="feed-lists" class="scrollbar-y">
+            <div id="top-news" class="article-list">
+              <ul>
+                <li><em>Top News Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                <li><em>Top News Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                <li><em>Top News Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                <li><em>Top News Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                <li><em>Top News Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                <li><em>Top News Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                <li><em>Top News Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+              </ul>
+              <div id="people" class="article-list">
+                <ul>
+                  <li><em>People Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>People Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>People Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>People Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>People Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>People Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>People Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                </ul>
+              </div>
+              <div id="sports" class="article-list">
+                <ul>
+                  <li><em>Sports Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>Sports Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>Sports Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>Sports Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>Sports Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>Sports Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                  <li><em>Sports Feed Placeholder</em>, Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="articleListGradFade"><span class="scrollIndicator"></span></div>
+          <div id="articleContainer" class="article z-layer">
+            <ul id="articleScroller"></ul>
+          </div>
         </div>
       </div>
     </div>
-    <div id="bottomBar"></div>
-  </div>
+    <div id="bottom-bar"></div>
+    
+    <script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
+    <script type="text/javascript" src="./DNA_common/js/init.js"></script>
+    <script type="text/javascript">
+      includeJs("./js/iscroll.js");
+      includeJs("./js/main.js");
+    </script>
+  </body>
 
-
-  <script type="text/javascript" src="./DNA_common/components/jQuery/jquery-1.8.2.js"></script>
-  <script type="text/javascript" src="./DNA_common/js/init.js"></script>
-  <script type="text/javascript">
-   includeJs("./js/iscroll.js");
-   includeJs("./js/main.js");
- </script>
-</body>
 </html>
